[project]
name = "comfyui-classifier"
description = "ComfyUI-Classifier is a custom node for ComfyUI that uses a zero-shot classification model to classify text inputs based on a set of candidate labels. This node leverages the power of Hugging Face Transformers to provide accurate and flexible text classification."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/fexploit/ComfyUI-Classifier"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Classifier"
Icon = ""
